[tool.poetry]
name = "mmc-export"
version = "2.8.6"
description = "Export MMC modpack to other modpack formats"
authors = ["RozeFound"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RozeFound/mmc-export"

keywords = [
    "minecraft",
    "mods",
    "modpack",
    "converter",
    "MultiMC"
]

packages = [
    { include = "mmc_export" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
aiohttp-client-cache = {extras = ["filesystem"], version = "^0.7.3"}
murmurhash2 = "^0.2.10"
tenacity = "^8.1.0"
Werkzeug = "^2.2.2"
cryptography = "^41.0.3"
xxhash = "^3.1.0"
gql-query-builder = "^0.1.7"
keyring = "^23.11.0"
tomli-w = "^1.0.0"
certifi = "^2023.7.22"

[tool.poetry.scripts]
mmc-export = "mmc_export:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
