[tool.poetry]
name = "mmc-export"
version = "2.8.10"
description = "Export MMC modpack to other modpack formats"
authors = ["RozeFound"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RozeFound/mmc-export"

keywords = [
    "minecraft",
    "mods",
    "modpack",
    "converter",
    "MultiMC"
]

packages = [
    { include = "mmc_export" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
aiohttp-client-cache = {extras = ["filesystem"], version = ">=0.7.3,<0.12.0"}
murmurhash2 = "^0.2.10"
tenacity = "^8.1.0"
Werkzeug = ">=2.2.2,<4.0.0"
cryptography = ">=41.0.3,<45.0.0"
xxhash = "^3.1.0"
keyring = ">=23.11,<25.0"
tomli-w = "^1.0.0"
certifi = "^2025.8.3"

[tool.poetry.scripts]
mmc-export = "mmc_export:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
